Now correctly forbidding functions returning `struct` in K&R C.

** Trigraphs in K&R C
Using a trigraph in K&R C now prints a warning that trigraphs are not supported
until C89.

** Optional `()` for `destructor`
Declaring a destructor in English now optionally allows `()`.

** Fixed C++ raw string literals
A raw string literal like `R"abc(X)ab)abc"` was previously not parsed
correctly.


* Changes in Cdecl 10.4

** Microsoft calling conventions
Added support for Microsoft calling conventions __cdecl, __clrcall, __fastcall,
__stdcall, __thiscall, and __vectorcall.

** Partial support for Microsoft's `__declspec`
Microsoft C's `__declspec` syntax is now parsed, but otherwise ignored.  (A
warning is printed that it's ignored.)

** Microsoft `__asm` declarations
Now recognizing Microsoft's `__asm` just to say it's not supported
(just like `asm`).

** More Microsoft types
Added types `__m128`, `__m128d`, `__m128i`, and `__m64`.

** Updated GnuLib for gcc 11
Pulled a fix from upstream GnuLib to fix a compile error under gcc 11.


* Changes in Cdecl 10.3

** Deleted functions and conversion operators
Marking functions and conversion operators `= delete` is now supported.

** Improved or fixed error messages
Improved or fixed several error messages.


* Changes in Cdecl 10.2

** At most one of `virtual`, `final`, or `override`.
In C++, at most one of `virtual`, `final`, or `override` is now printed.

** Added `typedef` to help
`typedef` has been added to the "store" section of English help.

** Pointers to `union` members
Pointers to `union` members are now allowed.

** `using` forbids type
`using` declarations now correctly forbid names in the types on the right-hand
side:

    using U = void (*F)();              // illegal


* Changes in Cdecl 10.1

** More robust scoped name type checking
Scoped names' scope-types are now checked against previous declarations.  For
example, the second declaration's attempted use of N::C as a namespace is now