@@ -1,0 +1,1 @@
+declare f as fastcall function returning int
