@@ -1,0 +1,1 @@
+declare f as pointer to pointer to stdcall function returning int
