@@ -1,0 +1,1 @@
+cdecl @ @ @ explain int __clrcall f() @ 0
