@@ -1,0 +1,1 @@
+cdecl @ @ @ explain int __cdecl f() @ 0
