@@ -1,0 +1,1 @@
+cdecl @ @ @ explain int __thiscall f() @ 0
