@@ -1,0 +1,1 @@
+cdecl @ @ @ explain int __vectorcall f() @ 0
