@@ -1,0 +1,1 @@
+cdecl @ @ @ explain int WINAPI f() @ 0
