@@ -1,0 +1,1 @@
+cdecl @ @ @ explain int (__stdcall **f)() @ 0
